--- a/AppBolivar/Src/scHistoriaMedica.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedica.fx.yaml
@@ -8027,6 +8027,100 @@ scHistoriaMedica As screen:
                             Width: =Parent.Width
                             ZIndex: =1
 
+                            Container40 As groupContainer.manualLayoutContainer:
+                                FillPortions: =0
+                                Height: =800
+                                LayoutMinHeight: =200
+                                LayoutMinWidth: =250
+                                ZIndex: =1
+
+                                lbEncabezado_190 As label:
+                                    BorderColor: =RGBA(0, 0, 0, 0)
+                                    BorderStyle: =BorderStyle.None
+                                    BorderThickness: =2
+                                    Color: =varcolor_ClaroElementoPrimario
+                                    DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                                    DisabledColor: =RGBA(161, 159, 157, 1)
+                                    FocusedBorderThickness: =4
+                                    Font: =Font.'Segoe UI'
+                                    FontWeight: =FontWeight.Semibold
+                                    PaddingBottom: =0
+                                    PaddingLeft: =0
+                                    PaddingRight: =0
+                                    PaddingTop: =0
+                                    Size: =18
+                                    Text: ="Datos"
+                                    Width: =100
+                                    ZIndex: =1
+
+                                lbEncabezado_191 As label:
+                                    BorderColor: =RGBA(0, 0, 0, 0)
+                                    BorderStyle: =BorderStyle.None
+                                    BorderThickness: =2
+                                    DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                                    DisabledColor: =RGBA(161, 159, 157, 1)
+                                    FocusedBorderThickness: =4
+                                    Font: =Font.'Segoe UI'
+                                    FontWeight: =FontWeight.Semibold
+                                    Height: =24
+                                    OnSelect: =
+                                    PaddingBottom: =0
+                                    PaddingLeft: =0
+                                    PaddingRight: =0
+                                    PaddingTop: =0
+                                    Size: =14
+                                    Text: ="Motivo de consulta"
+                                    Width: =250
+                                    Y: =53
+                                    ZIndex: =2
+
+                                tiScHistoria1_7 As text:
+                                    BorderColor: =RGBA(0, 0, 0, 1)
+                                    Default: ="|"
+                                    Font: =Font.'Segoe UI'
+                                    Height: =36
+                                    Mode: =
+                                    RadiusBottomLeft: =4
+                                    RadiusBottomRight: =4
+                                    RadiusTopLeft: =4
+                                    RadiusTopRight: =4
+                                    Reset: =resetear
+                                    Size: =12
+                                    Width: =810
+                                    X: =1
+                                    Y: =86
+                                    ZIndex: =3
+
+                                lbEncabezado_192 As label:
+                                    BorderColor: =RGBA(0, 0, 0, 0)
+                                    BorderStyle: =BorderStyle.None
+                                    BorderThickness: =2
+                                    DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                                    DisabledColor: =RGBA(161, 159, 157, 1)
+                                    FocusedBorderThickness: =4
+                                    Font: =Font.'Segoe UI'
+                                    FontWeight: =FontWeight.Semibold
+                                    Height: =24
+                                    OnSelect: =
+                                    PaddingBottom: =0
+                                    PaddingLeft: =0
+                                    PaddingRight: =0
+                                    PaddingTop: =0
+                                    Size: =14
+                                    Text: ="Enfermedad Actual"
+                                    Width: =250
+                                    X: =1
+                                    Y: =157
+                                    ZIndex: =4
+
+                                RichTextEditor1_21 As richTextEditor:
+                                    BorderColor: =RGBA(0, 0, 0, 1)
+                                    Default: =
+                                    Height: =180
+                                    Width: =810
+                                    Y: =192
+                                    ZIndex: =5
+
                             galChecklist_1 As gallery.variableTemplateHeightGallery:
                                 BorderColor: =RGBA(245, 245, 245, 1)
                                 Default: =First(formularioCamposLineales)
@@ -8045,7 +8139,7 @@ scHistoriaMedica As screen:
                                 TemplatePadding: =0
                                 TemplateSize: =100
                                 Width: =100
-                                ZIndex: =1
+                                ZIndex: =2
 
                                 Container15_67 As groupContainer.horizontalAutoLayoutContainer:
                                     Height: |-
@@ -8164,7 +8258,7 @@ scHistoriaMedica As screen:
                                 LayoutMode: =LayoutMode.Auto
                                 Width: =Parent.Width
                                 Y: =20
-                                ZIndex: =2
+                                ZIndex: =3
 
                                 lbEncabezado_83 As label:
                                     BorderColor: =RGBA(0, 0, 0, 0)
@@ -8201,7 +8295,7 @@ scHistoriaMedica As screen:
                                 PaddingTop: =1
                                 Width: =Parent.Width
                                 Y: =40
-                                ZIndex: =3
+                                ZIndex: =4
 
                                 lbEncabezado_84 As label:
                                     AlignInContainer: =AlignInContainer.Stretch
@@ -8248,7 +8342,7 @@ scHistoriaMedica As screen:
                                 PaddingTop: =1
                                 Width: =Parent.Width
                                 Y: =40
-                                ZIndex: =4
+                                ZIndex: =5
 
                                 lbEncabezado_87 As label:
                                     AlignInContainer: =AlignInContainer.Stretch
@@ -8470,7 +8564,7 @@ scHistoriaMedica As screen:
                                 LayoutMode: =LayoutMode.Auto
                                 Width: =Parent.Width
                                 Y: =60
-                                ZIndex: =11
+                                ZIndex: =10
 
                                 lbEncabezado_78 As label:
                                     BorderColor: =RGBA(0, 0, 0, 0)
@@ -8529,7 +8623,7 @@ scHistoriaMedica As screen:
                                 LayoutMode: =LayoutMode.Auto
                                 Width: =Parent.Width
                                 Y: =60
-                                ZIndex: =12
+                                ZIndex: =11
 
                                 htmlNutriTabla_1 As htmlViewer:
                                     AlignInContainer: =AlignInContainer.Stretch
@@ -8923,7 +9017,7 @@ scHistoriaMedica As screen:
                                 PaddingTop: =1
                                 Width: =Parent.Width
                                 Y: =40
-                                ZIndex: =13
+                                ZIndex: =12
 
                                 lbEncabezado_93 As label:
                                     AlignInContainer: =AlignInContainer.Stretch
