--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -257,8 +257,8 @@
             RadiusTopRight: =8
             Visible: =false
             Width: =500
-            X: =296
-            Y: =24
+            X: =322
+            Y: =171
             ZIndex: =14
 
         Image18_11 As image:
@@ -412,8 +412,30 @@
         Y: =231
         ZIndex: =27
 
+        TextInput6 As text:
+            BorderStyle: =BorderStyle.None
+            Default: =""
+            DisabledFill: |-
+                =Switch(LookUp('public.Medical_Center_Counter', id_Ticket = ThisItem.id).etapa,
+                "Triaje", RGBA(180, 130, 0 , 1),
+                "Caja", RGBA(0, 73, 135, 1),
+                "Atención Medica", RGBA(8, 136, 49,1),
+                RGBA(234,76,83, 1)
+                )
+            DisplayMode: =DisplayMode.Disabled
+            Fill: =RGBA(95, 106, 146, 1)
+            Height: =160
+            OnSelect: =Select(Parent)
+            RadiusBottomLeft: =12
+            RadiusBottomRight: =12
+            RadiusTopLeft: =12
+            RadiusTopRight: =12
+            Width: =39
+            ZIndex: =1
+
         Container23 As groupContainer.horizontalAutoLayoutContainer:
             BorderThickness: =2
+            Fill: =RGBA(255, 255, 255, 1)
             Height: =Parent.TemplateHeight
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =10
@@ -422,8 +444,9 @@
             RadiusBottomRight: =15
             RadiusTopLeft: =15
             RadiusTopRight: =15
-            Width: =Parent.TemplateWidth
-            ZIndex: =1
+            Width: =1000
+            X: =10
+            ZIndex: =2
 
             Container22_1 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =2
@@ -730,7 +753,7 @@
                                 lookupResult: LookUp('public.Medical_Center_Counter',id_Ticket = ThisItem.id,etapa)
                             },
                             If(
-                                Text(Today(), "dd/mm/yyyy") <> Text(ThisItem.fecha_cita, "dd/mm/yyyy") || lookupResult="Caja" || ThisItem.caja_finalizada = true,
+                                Text(Today(), "dd/mm/yyyy") <> Text(ThisItem.fecha_cita, "dd/mm/yyyy") ||  lookupResult="Caja" ||ThisItem.caja_finalizada = true,
                                 DisplayMode.Disabled,
                                 DisplayMode.Edit
                             )
